[package]
name = "kosem-base-rpc-client"
version = "0.1.0"
authors = ["IdanArye <idanarye@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/idanarye/kosem"

[dependencies]
log = "0.4.17"
actix = "0.13.0"
awc = "3.0.1"
futures = "0.3.24"
actix-codec = "0.5.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

kosem-webapi = { path = "../kosem-webapi" }
