[package]
name = "kosem-base-rpc-client"
version = "0.1.0"
authors = ["IdanArye <idanarye@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/idanarye/kosem"

[dependencies]
log = "^0.4"
actix = "^0.13"
awc = "^3"
futures = "^0.3"
actix-codec = "^0.5"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

kosem-webapi = { path = "../kosem-webapi" }
