[package]
name = "kosem-gtk"
version = "0.1.0"
authors = ["IdanArye <idanarye@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/idanarye/kosem"

[dependencies]
log = "0.4.7"
flexi_logger = "0.14.0"
config = "0.9.3"
serde = { version = "1.0.97", features = ["derive"] }
