[package]
name = "kosem-gui"
version = "0.1.0"
authors = ["IdanArye <idanarye@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/idanarye/kosem"

[dependencies]
log = "0.4.17"
flexi_logger = "^0.28"
config = "^0.14"
serde = { version = "^1", features = ["derive"] }
gtk = "0.15.5"
gio = "0.15.12"
glib = "0.15.12"
actix = "^0.13"
awc = "^3"
futures = "^0.3"
actix-codec = "^0.5"
typed-builder = "^0.18"

kosem-webapi = { path = "../kosem-webapi" }
kosem-base-rpc-client = { path = "../kosem-base-rpc-client" }
sxd-document = "^0.3"
sxd-xpath = "^0.4"
rust-embed = "^8"

woab = "0.7.0"
anyhow = "^1"
tokio = "^1"
