[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kosem"
version = "0.0.0"
description = ""
classifiers = [
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Framework :: Pytest",
]
dependencies = [
    "websocket-client",
]

 [[project.authors]]
 name = "Idan Arye"
 email = "idanarye@gmail.com"

[project.urls]
Repository = "https://github.com/idanarye/kosem"
