[package]
name = "kosem-server"
version = "0.1.0"
authors = ["IdanArye <idanarye@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/idanarye/kosem"

[dependencies]
log = "0.4.14"
flexi_logger = "0.17.1"
actix-web = "=4.0.0-beta.5"
config = "0.11.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"

futures = "0.3.14"
kosem-webapi = { path = "../kosem-webapi" }
actix = "0.11.1"
actix-web-actors = "4.0.0-beta.4"
actix-rt = "2.2.0"
typed-builder = "0.9.0"
serde-value = "0.7.0"
actix-service = "=2.0.0-beta.5"
