[package]
name = "kosem-server"
version = "0.1.0"
authors = ["IdanArye <idanarye@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/idanarye/kosem"

[dependencies]
log = "0.4.17"
flexi_logger = "0.23.1"
actix-web = "4.1.0"
config = "0.13.2"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

futures = "0.3.24"
kosem-webapi = { path = "../kosem-webapi" }
actix = "0.13.0"
actix-web-actors = "4.1.0"
actix-rt = "2.7.0"
typed-builder = "0.10.0"
serde-value = "0.7.0"
actix-service = "2.0.2"
