[package]
name = "kosem-server"
version = "0.1.0"
authors = ["IdanArye <idanarye@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/idanarye/kosem"

[dependencies]
log = "^0.4"
flexi_logger = "^0.28"
actix-web = "^4"
config = "^0.14"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

futures = "^0.3"
kosem-webapi = { path = "../kosem-webapi" }
actix = "^0.13"
actix-web-actors = "^4"
actix-rt = "^2"
typed-builder = "^0.18"
serde-value = "0.7.0"
actix-service = "^2"
