[package]
name = "kosem-webapi"
version = "0.1.0"
authors = ["Idan Arye <IdanArye@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/idanarye/kosem"

[lib]

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
actix-web = "=4.0.0-beta.5"
actix = "0.11.1"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde-value = "0.7.0"
