[package]
name = "kosem-webapi"
version = "0.1.0"
authors = ["Idan Arye <IdanArye@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/idanarye/kosem"

[lib]

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
actix-web = "4.1.0"
actix = "0.13.0"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
serde-value = "0.7.0"
