[package]
name = "kosem-webapi"
version = "0.1.0"
authors = ["Idan Arye <IdanArye@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/idanarye/kosem"

[lib]

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
actix-web = "^4"
actix = "^0.13"
uuid = { version = "^1", features = ["serde", "v4"] }
serde-value = "^0.7"
